--- a/src/pages/style/NavbarTwo.css
+++ b/src/pages/style/NavbarTwo.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 0;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 
 /* NAV MENU */
@@ -60,7 +61,6 @@
   transition: background 0.3s ease, color 0.3s ease;
 }
 
-/* i want to hover on a a beutiful green gradient border bottom will over from left to right */
 
 #menu li a:hover {
   background: #f2f2f2;
